syntax = "proto3";

option java_package = "com.taskable.protobufs";
option java_outer_classname = "AuthProto";

message LoginExchangeRequest {
  string authorization_code = 1;
}

message LoginExchangeResponse {
  string csrf_token = 1;
}

message GetCsrfResponse {
  string csrf_token = 1;
}
